--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -64,7 +64,7 @@
     <div class="sidebar-header">
         <a href="/dashboard.html" class="logo-link">
             <!-- Logo original sem filtros -->
-            <img src="/images/fundo-escuro.png" alt="Logo Setor de Arte" class="sidebar-logo">
+            <img src="/images/semfundo.svg" alt="Logo Setor de Arte" class="sidebar-logo">
             <h1 class="visually-hidden">Setor de Arte</h1> 
         </a>
     </div>
